<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MainKinectFragment">

    <!-- View Guidelines -->
    <!-- This is used to fit certain view elements -->
    <!-- Correctly on any screen size -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <!-- Logo -->
    <ImageView
        android:id="@+id/view_image_logo"
        android:layout_width="0sp"
        android:layout_height="0sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5sp"
        android:src="@drawable/kinect"
        android:contentDescription="@string/logo_description" />

    <!-- Title -->
    <TextView
        android:id="@+id/view_title_kinect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        android:textSize="26sp"
        android:fontFamily="@font/arial"
        android:textStyle="bold"
        android:textColor="@color/title"
        android:text="@string/title_kinect" />

    <!-- Description -->
    <TextView
        android:id="@+id/view_description_kinect"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_title_kinect"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/arial"
        android:text="@string/description_kinect"
        android:textAlignment="center"
        android:textColor="#7E889A"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/view_kinect_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_description_kinect"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50sp"
        android:textSize="24sp"
        android:visibility="invisible"
        android:text="@string/message_kinect" />

    <!-- Pulse View -->
    <View
        android:id="@+id/view_pulse"
        android:layout_width="125sp"
        android:layout_height="125sp"
        app:layout_constraintTop_toTopOf="@id/button_kinect_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/circle_button"/>

    <!-- Buttton Start -->
    <Button
        android:id="@+id/button_kinect_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25sp"
        android:background="@drawable/circle_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/arial"
        android:text="@string/button_start" />


</androidx.constraintlayout.widget.ConstraintLayout>