<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainDefaultFragment">

    <ScrollView
        android:id="@+id/layout_default"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- View Guidelines -->
            <!-- This is used to fit certain view elements -->
            <!-- Correctly on any screen size -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9"/>

            <!-- Logo -->
            <ImageView
                android:id="@+id/view_logo_default"
                android:layout_width="0sp"
                android:layout_height="0sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline_top"
                android:layout_marginTop="5sp"
                android:src="@drawable/ic_default_fragment"
                android:contentDescription="@string/logo_description" />

            <!-- Title -->
            <TextView
                android:id="@+id/label_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline_top"
                android:textSize="26sp"
                android:fontFamily="@font/arial"
                android:textStyle="bold"
                android:textColor="@color/title"
                android:text="@string/title_default" />

            <!-- Description -->
            <TextView
                android:id="@+id/description_default"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/label_default"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/arial"
                android:text="@string/description_default"
                android:textAlignment="center"
                android:textColor="@color/description"
                android:textSize="18sp" />

            <!-- Input -->
            <EditText
                android:id="@+id/input_command"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="25sp"
                app:layout_constraintTop_toBottomOf="@id/description_default"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_command"
                android:autofillHints=""/>

            <!-- Send -->
            <Button
                android:id="@+id/button_send"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/input_command"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:padding="15sp"
                android:backgroundTint="@color/button"
                android:textColor="@color/white"
                android:fontFamily="@font/arial"
                android:textSize="20sp"
                android:text="@string/button_send" />

            <!-- Voice -->
            <Button
                android:id="@+id/button_voice"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/button_send"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:padding="15sp"
                android:backgroundTint="@color/button"
                android:textColor="@color/white"
                android:fontFamily="@font/arial"
                android:textSize="20sp"
                android:text="@string/button_voice" />

            <!-- Kinect -->
            <Button
                android:id="@+id/button_kinect"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/button_voice"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:padding="15sp"
                android:backgroundTint="@color/button"
                android:textColor="@color/white"
                android:fontFamily="@font/arial"
                android:textSize="20sp"
                android:text="@string/button_kinect" />

            <!-- Rest -->
            <Button
                android:id="@+id/button_rest"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/button_kinect"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:padding="15sp"
                android:backgroundTint="@color/button"
                android:textColor="@color/white"
                android:fontFamily="@font/arial"
                android:textSize="20sp"
                android:text="@string/button_rest" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>