<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_sheet_fragment_view"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="280sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_information_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Info logo -->
        <ImageView
            android:id="@+id/view_image_info_logo"
            android:layout_marginEnd="15sp"
            android:layout_marginTop="50sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/gray"
            android:alpha=".6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_info_24"
            android:contentDescription="@string/logo_description_info" />

        <!-- Title -->
        <TextView
            android:id="@+id/view_text_topsheet_title"
            app:layout_constraintTop_toBottomOf="@id/view_image_info_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/title"
            android:textStyle="bold"
            android:fontFamily="@font/arial"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_topsheet" />

        <!-- User Label -->
        <TextView
            android:id="@+id/view_text_user_label"
            app:layout_constraintTop_toBottomOf="@id/view_text_topsheet_title"
            android:fontFamily="@font/arial"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/description"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="75sp"
            android:translationY="3sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_user" />

        <!-- User Content -->
        <TextView
            android:id="@+id/view_text_user_content"
            app:layout_constraintTop_toTopOf="@id/view_text_user_label"
            app:layout_constraintStart_toEndOf="@id/view_text_user_label"
            android:layout_marginStart="15sp"
            android:translationY="3sp"
            android:fontFamily="@font/arial"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_answer" />

        <!-- IP Label -->
        <TextView
            android:id="@+id/view_text_ip_label"
            app:layout_constraintTop_toBottomOf="@id/view_text_user_label"
            android:fontFamily="@font/arial"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/description"
            app:layout_constraintEnd_toEndOf="@id/view_text_user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ip" />

        <!-- IP Content -->
        <TextView
            android:id="@+id/view_text_ip_content"
            android:fontFamily="@font/arial"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/description"
            app:layout_constraintTop_toTopOf="@id/view_text_ip_label"
            app:layout_constraintStart_toEndOf="@id/view_text_ip_label"
            android:layout_marginStart="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_answer" />

        <!-- Separator line -->
        <View
            android:id="@+id/view_image_separator"
            app:layout_constraintTop_toBottomOf="@id/view_text_ip_label"
            app:layout_constraintStart_toStartOf="@id/view_text_topsheet_title"
            app:layout_constraintEnd_toEndOf="@id/view_text_topsheet_title"
            android:layout_marginTop="5sp"
            android:background="@color/black"
            android:layout_width="0sp"
            android:layout_height="1sp"
            tools:ignore="SmallSp" />

        <!-- MyRobotLab Label -->
        <TextView
            android:id="@+id/view_text_mrl_label"
            app:layout_constraintTop_toBottomOf="@id/view_image_separator"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/arial"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/description"
            app:layout_constraintEnd_toEndOf="@id/view_text_user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_myrobotlab" />

        <!-- MyRobotLab Content -->
        <TextView
            android:id="@+id/view_text_mrl_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/view_text_mrl_label"
            app:layout_constraintStart_toEndOf="@id/view_text_mrl_label"
            android:layout_marginStart="15sp"
            android:fontFamily="@font/arial"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/description"
            android:text="@string/no_answer" />

        <!-- Java Label -->
        <TextView
            android:id="@+id/view_text_java_label"
            app:layout_constraintTop_toBottomOf="@id/view_text_mrl_label"
            app:layout_constraintEnd_toEndOf="@id/view_text_mrl_label"
            android:fontFamily="@font/arial"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_java" />

        <!-- Java Content -->
        <TextView
            android:id="@+id/view_text_java_content"
            app:layout_constraintTop_toTopOf="@id/view_text_java_label"
            app:layout_constraintStart_toEndOf="@id/view_text_java_label"
            android:layout_marginStart="15sp"
            android:fontFamily="@font/arial"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_answer" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Expandable Line Logo -->
        <ImageView
            android:id="@+id/view_image_expandable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_horizontal_rule_24"
            android:contentDescription="@string/logo_description_separator" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>